# rust-sms-receiver

./: Cargo.toml  README.md
examples/: receive_sms_example.rs
src/: lib.rs  message.rs  sms_receiver.rs
src/kdeconnect_client/: connection.rs  conversation_message.rs  daemon.rs  device.rs  mod.rs  sms.rs
